--- a/contactus.html
+++ b/contactus.html
@@ -16,6 +16,36 @@
       min-height: 100vh;
     }
 
+    .nav-links {
+            display: flex;
+            gap: 3rem;
+            list-style: none;
+        }
+
+        .nav-links a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: 300;
+            letter-spacing: 1px;
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 1px;
+            background: #fff;
+            transition: width 0.3s ease;
+        }
+
+        .nav-links a:hover::after {
+            width: 100%;
+        }
+
     .contact-container {
       max-width: 600px;
       width: 100%;
@@ -132,6 +162,18 @@
   </style>
 </head>
 <body>
+      <nav id="navbar">
+        <div class="nav-container">
+            <div class="logo"><img src="logo.png" alt="AION Logo">AION</div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#phone">AION-1</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="contactus.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="particles" id="particles"></div>
   <div class="contact-container">
     <div class="logo"><img src="logo.png" alt="AION Logo">AION</div>
