--- a/contactus.html
+++ b/contactus.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact Us - AION</title>
   <style>
     body {
@@ -10,104 +10,181 @@
       margin: 0;
       background: #000;
       color: #fff;
+    }
+    nav {
+      width: 100%;
+      padding: 1rem 2rem;
       display: flex;
       justify-content: center;
+      background: rgba(0, 0, 0, 0.7);
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 10;
+      backdrop-filter: blur(5px);
+      transition: background 0.3s ease, padding 0.3s ease;
+
+    }
+    nav.scrolled {
+      background: rgba(0, 0, 0, 0.85);
+      padding: 1rem 4rem;
+    }
+    .nav-container {
+      display: flex;
       align-items: center;
-      min-height: 100vh;
-    }
-
-    .nav-links {
-            display: flex;
-            gap: 3rem;
-            list-style: none;
-        }
-
-        .nav-links a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: 300;
-            letter-spacing: 1px;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .nav-links a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 1px;
-            background: #fff;
-            transition: width 0.3s ease;
-        }
-
-        .nav-links a:hover::after {
-            width: 100%;
-        }
-
-    .contact-container {
-      max-width: 600px;
+      justify-content: space-between;
+      max-width: 1200px;
       width: 100%;
-      padding: 2rem;
-      background: rgba(255,255,255,0.02);
-      border: 1px solid rgba(255,255,255,0.1);
-      border-radius: 15px;
-      text-align: center;
+      position: relative;
     }
-
     .logo {
-        
       font-size: 2rem;
       font-weight: 200;
       letter-spacing: 8px;
-      margin-bottom: 1rem;
       animation: glow 2s ease-in-out infinite alternate;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
     }
     .logo img {
-        max-width: 100px;
-        display: block;
-        margin: 0 auto;
+      max-width: 60px;
+      display: block;
     }
-
     @keyframes glow {
-      from { text-shadow: 0 0 10px #fff, 0 0 20px #fff; }
-      to { text-shadow: 0 0 20px #fff, 0 0 30px #fff; }
+      from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff;
+      }
+      to {
+        text-shadow: 0 0 20px #fff, 0 0 30px #fff;
+      }
+    }
+    .nav-links {
+      display: flex;
+      gap: 2rem;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    .nav-links li {
+      opacity: 1;
+      transform: none;
+      transition: all 0.4s ease;
+    }
+    .nav-links a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 300;
+      letter-spacing: 1px;
+      position: relative;
+    }
+    .nav-links a::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 0;
+      height: 1px;
+      background: #fff;
+      transition: width 0.3s ease;
+    }
+    .nav-links a:hover::after {
+      width: 100%;
+    }
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 5px;
+      cursor: pointer;
+      z-index: 20;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 8px;
+      border-radius: 8px;
+      position: absolute;
+      top: 50%;
+      right: 1rem;
+      transform: translateY(-50%);
+      transition: transform 0.3s ease;
+    }
+    .hamburger span {
+      width: 25px;
+      height: 3px;
+      background: #fff;
+      border-radius: 5px;
+      transition: all 0.3s ease;
+      position: relative;
+    }
+    .hamburger.active span:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+    .hamburger.active span:nth-child(2) {
+      opacity: 0;
+    }
+    .hamburger.active span:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -5px);
     }
 
+    .contact-container {
+      max-width: 600px;
+      width: 90%;
+      padding: 2rem;
+      margin: 8rem auto 2rem auto;
+      background: rgba(255, 255, 255, 0.02);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 15px;
+      text-align: center;
+      position: relative;
+      z-index: 2;
+      backdrop-filter: blur(2px);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+    }
+    .contact-container .logo {
+      flex-direction: column;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .contact-container .logo img {
+      margin-bottom: 0.5rem;
+    }
     .contact-info {
-      margin-bottom: 2rem;
       line-height: 1.8;
       font-weight: 300;
+      font-size: 1rem;
     }
-
     .contact-info a {
       color: #fff;
       text-decoration: none;
+      word-wrap: break-word;
     }
-
     form {
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      width: 100%;
+      max-width: 400px;
     }
-
     input, textarea {
+      width: 100%;
       padding: 1rem;
       border-radius: 10px;
       border: 1px solid rgba(255,255,255,0.2);
       background: rgba(255,255,255,0.05);
       color: #fff;
       font-size: 1rem;
+      backdrop-filter: blur(10px);
     }
-
     textarea {
       resize: none;
       height: 120px;
     }
-
     button {
       padding: 1rem;
+      width: 100%;
       border-radius: 10px;
       border: none;
       background: #fff;
@@ -115,77 +192,135 @@
       font-weight: bold;
       cursor: pointer;
       transition: 0.3s;
+      font-size: 1rem;
     }
-
     button:hover {
       background: #999;
       color: #fff;
     }
 
-    /* Background Particles */
-        .particles {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: 1;
-        }
-
-        /* Particle style */
-.particle {
-    position: absolute;
-    width: 2px;
-    height: 2px;
-    background: #fff;
-    opacity: 0.3;
-    border-radius: 50%;
-    animation: float-particle 20s infinite linear;
-}
-
-/* Animate particles moving diagonally and fading */
-@keyframes float-particle {
-    0% {
+    .particles {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 1;
+      overflow: hidden;
+    }
+    .particle {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: #fff;
+      opacity: 0.3;
+      border-radius: 50%;
+      animation: float-particle 20s infinite linear;
+    }
+    @keyframes float-particle {
+      0% {
         transform: translate(0, 0);
         opacity: 0.3;
-    }
-    50% {
+      }
+      50% {
         opacity: 0.8;
-    }
-    100% {
+      }
+      100% {
         transform: translate(100vw, -100vh);
         opacity: 0;
+      }
     }
-}
 
+    @media (max-width: 768px) {
+      .nav-links {
+        position: absolute;
+        top: 70px;
+        right: -220px;
+        flex-direction: column;
+        background: rgba(0, 0, 0, 0.95);
+        width: 200px;
+        padding: 1rem;
+        border-radius: 10px 0 0 10px;
+        opacity: 0;
+        transform: translateX(50px);
+        transition: all 0.4s ease;
+        display: none;
+      }
+      .nav-links.open {
+        display: flex;
+        right: 0;
+        opacity: 1;
+        transform: translateX(0);
+      }
+      .nav-links li {
+        opacity: 0;
+        transform: translateX(20px);
+        transition: all 0.4s ease;
+      }
+      .nav-links.open li {
+        opacity: 1;
+        transform: translateX(0);
+      }
+      .hamburger {
+        display: flex;
+      }
+      .contact-container {
+        margin-top: 9rem;
+        padding: 1.5rem;
+      }
+    }
+    @media (max-width: 480px) {
+      .logo {
+        font-size: 1.5rem;
+        letter-spacing: 4px;
+      }
+      .logo img {
+        max-width: 50px;
+      }
+      .contact-container {
+        padding: 1rem;
+      }
+      input, textarea, button {
+        font-size: 0.9rem;
+        padding: 0.8rem;
+      }
+    }
   </style>
 </head>
 <body>
-      <nav id="navbar">
-        <div class="nav-container">
-            <div class="logo"><img src="logo.png" alt="AION Logo">AION</div>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#phone">AION-1</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="contactus.html">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+  <nav id="navbar">
+    <div class="nav-container">
+      <div class="logo"><img src="logo.png" alt="AION Logo" />AION</div>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#phone">AION-1</a></li>
+        <li><a href="index.html#features">Features</a></li>
+      </ul>
+      <div class="hamburger" id="hamburger" aria-label="Toggle navigation" aria-expanded="false" role="button" tabindex="0">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </nav>
 
-    <div class="particles" id="particles"></div>
+  <div class="particles" id="particles"></div>
+
   <div class="contact-container">
-    <div class="logo"><img src="logo.png" alt="AION Logo">AION</div>
+    <div class="logo">
+      <img src="logo.png" alt="AION Logo" />
+      AION
+    </div>
     <div class="contact-info">
-      ☎️ <strong>+91 85889 30528</strong> <br>
-      ✉️ <a href="mailto:kunalj6988@gmail.com">kunalj6988@gmail.com</a> <br>
-      📷 <a href="https://instagram.com/aiont_ech" target="_blank">@aiont_ech</a>
+      ☎️ <strong>+91 85889 30528</strong> <br />
+      ✉️ <a href="mailto:kunalj6988@gmail.com">kunalj6988@gmail.com</a><br />
+      📷 <a href="https://instagram.com/aiont_ech" target="_blank" rel="noopener">@aiont_ech</a>
     </div>
 
     <form id="contact-form">
-      <input type="text" name="user_name" placeholder="Your Name" required>
-      <input type="email" name="user_email" placeholder="Your Email" required>
+      <input type="text" name="user_name" placeholder="Your Name" required />
+      <input type="email" name="user_email" placeholder="Your Email" required />
       <textarea name="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
@@ -194,34 +329,64 @@
   <!-- EmailJS Library -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
-    (function(){
+    (function () {
       emailjs.init("8AejkcK88C35rBKof"); // replace with your public key from EmailJS
     })();
 
-    document.getElementById('contact-form').addEventListener('submit', function(event) {
+    document.getElementById("contact-form").addEventListener("submit", function (event) {
       event.preventDefault();
-
-      emailjs.sendForm('service_cz3pckn', 'template_6inturw', this)
-        .then(function() {
-          alert('Message sent successfully!');
-        }, function(error) {
-          alert('Failed to send. Error: ' + JSON.stringify(error));
-        });
+      emailjs.sendForm("service_cz3pckn", "template_6inturw", this).then(
+        function () {
+          alert("Message sent successfully!");
+        },
+        function (error) {
+          alert("Failed to send. Error: " + JSON.stringify(error));
+        }
+      );
     });
-    const particlesContainer = document.getElementById('particles');
-const numParticles = 50;
 
-for (let i = 0; i < numParticles; i++) {
-    const particle = document.createElement('div');
-    particle.classList.add('particle');
-    // Random start positions all over the viewport
-    particle.style.left = Math.random() * 100 + 'vw';
-    particle.style.top = Math.random() * 100 + 'vh';
-    particle.style.animationDelay = (Math.random() * 20) + 's';
-    particle.style.animationDuration = (15 + Math.random() * 15) + 's';
-    particlesContainer.appendChild(particle);
-}
+    // Particle Generation
+    const particlesContainer = document.getElementById("particles");
+    const numParticles = 50;
 
+    for (let i = 0; i < numParticles; i++) {
+      const particle = document.createElement("div");
+      particle.classList.add("particle");
+      particle.style.left = Math.random() * 100 + "vw";
+      particle.style.top = Math.random() * 100 + "vh";
+      particle.style.animationDelay = Math.random() * 20 + "s";
+      particle.style.animationDuration = 15 + Math.random() * 15 + "s";
+      particlesContainer.appendChild(particle);
+    }
+
+    // Hamburger Menu Toggle + Animation + Staggered Nav Links
+    const hamburger = document.getElementById("hamburger");
+    const navLinks = document.getElementById("nav-links");
+    const navItems = navLinks.querySelectorAll("li");
+
+    hamburger.addEventListener("click", () => {
+      navLinks.classList.toggle("open");
+      hamburger.classList.toggle("active");
+      hamburger.setAttribute("aria-expanded", hamburger.classList.contains("active"));
+
+      navItems.forEach((item, index) => {
+        if (navLinks.classList.contains("open")) {
+          item.style.transitionDelay = `${index * 0.1 + 0.2}s`;
+        } else {
+          item.style.transitionDelay = "0s";
+        }
+      });
+    });
+
+    // Navbar background blur & color on scroll
+    window.addEventListener("scroll", () => {
+      const navbar = document.querySelector("nav");
+      if (window.scrollY > 10) {
+        navbar.classList.add("scrolled");
+      } else {
+        navbar.classList.remove("scrolled");
+      }
+    });
   </script>
 </body>
 </html>
