--- a/index.html
+++ b/index.html
@@ -641,8 +641,8 @@ nav.scrolled .nav-bar {
   <!-- slide-down menu -->
   <div class="nav-menu" id="navMenu">
     <a href="#hero">AION‑1</a>
-    <a href="#audio">Audio</a>
-    <a href="#watch">Watch</a>
+    <a href="#audio">Lineup</a>
+    <a href="#watch">Customizables</a>
     <a href="#accessory">Accessories</a>
     <a href="contactus.html">Contact</a>
   </div>
@@ -659,7 +659,7 @@ nav.scrolled .nav-bar {
                         Pure, powerful and obsessively minimal. AION‑1 brings back the infinity display,
                         practical dual cameras and bloat‑free software in a body designed for the next decade.
                     </p>
-                    <a href="#aion1-store" class="primary-cta">SHOP AION‑1</a>
+                    <a href="shop.html" class="primary-cta">SHOP AION‑1</a>
                     <a href="#audio" class="secondary-link">Explore more products</a>
                 </div>
 
@@ -694,7 +694,7 @@ nav.scrolled .nav-bar {
                     <div class="product-image-wrap">
                         <!-- replace src with your audio product render -->
                          
-                        <a href="aion-1a.html" class="product-action">SHOP</a>
+                        <a href="shop.html" class="product-action">SHOP</a>
                     </div>
                 </article>
             </div>
